--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,8 +6,8 @@
 }
 
 html, body{
-	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))),url(images/heart.jpg);
-	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(images/heart.jpg);
+	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))),url(images/bunny.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(images/bunny.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -16,6 +16,10 @@ html, body{
   font-weight: 300;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
+}
+
+.hero{
+	margin-bottom: 5rem;
 }
 
 .hero-textbox{
@@ -84,7 +88,7 @@ p{
 }
 
 .description p{	
-	text-align:left;
+	text-align:center;
 	padding:0.5rem;
 }
 
@@ -104,7 +108,7 @@ p{
 	color:rgb(237, 239, 242);
 	margin:10px;
 	border-bottom: 2px solid transparent;
-  -webkit-transition: border-bottom 0.2s;
+  -transition: border-bottom 0.2s;
   transition: border-bottom 0.2s;
 	font-size:1.2rem;
 }
@@ -128,19 +132,14 @@ p{
 }
 
 .image-link{
-		opacity: 1;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
+	opacity: 1;
     transform: scale(1);
-    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
     transition: transform 0.3s, opacity 0.3s;
 }
 
-.image-link img:hover{
+.image-link:hover{
     opacity: 0.9;
-    -webkit-transform: scale(1.015);
-    -ms-transform: scale(1.015);
-    transform: scale(1.015);
+    transform: scale(1.025);
 }
 
 @media (max-width: 500px){
