--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,8 +6,8 @@
 }
 
 html, body{
-	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))),url(images/bunny.jpg);
-	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(images/bunny.jpg);
+	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))),url(images/autumnlake.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(images/autumnlake.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
